--- a/src/styles/components/Header.css
+++ b/src/styles/components/Header.css
@@ -1,6 +1,7 @@
 .Header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   height: 100px;
 }
 .Header-checkout {
@@ -10,6 +11,7 @@
   align-items: center;
   justify-items: center;
   width: 30px;
+  height: fit-content;
   margin: 0 0 0 0.5em;
 }
 .Header-alert {
@@ -26,8 +28,8 @@
 }
 .Handler-alert {
   position: absolute;
-  top: 24px;
-  right: -9px;
+  top: -14px;
+  right: -6px;
   height: 26px;
   width: 26px;
   display: flex;
