--- a/src/styles/components/Payment.css
+++ b/src/styles/components/Payment.css
@@ -1,8 +1,9 @@
 .Payment {
-  grid-template-columns: 3fr 1fr;
+  width: 80%;
+  display: grid;
+  justify-self: center;
   grid-gap: 2rem;
   grid-row-gap: 1.5em;
-  display: grid;
   min-height: 60vh;
 }
 .Payment-back {
